Change optimizer option "outputs" to "readable_outputs"

--- a/old_docs/docs/tutorial/simple_example.mdx
+++ b/old_docs/docs/tutorial/simple_example.mdx
@@ -88,7 +88,7 @@ class SteepestDescent(Optimizer):
         self.options.declare('opt_tol', default=1e-5, types=float)
         # Enable user to specify, as a list, which among the available outputs
         # need to be written to output files
-        self.options.declare('outputs', types=list, default=[])
+        self.options.declare('readable_outputs', types=list, default=[])
 
         # Specify format of outputs available from your optimizer after each iteration
         self.available_outputs = {
@@ -195,7 +195,7 @@ prob = X4()
 optimizer = SteepestDescent(prob,
                             opt_tol=opt_tol,
                             maxiter=maxiter,
-                            outputs=['itr', 'obj', 'x', 'opt', 'time'])
+                            readable_outputs=['itr', 'obj', 'x', 'opt', 'time'])
 
 # Check first derivatives at the initial guess, if needed
 optimizer.check_first_derivatives(prob.x0)
