--- a/tutorials/simple_example.ipynb
+++ b/tutorials/simple_example.ipynb
@@ -120,7 +120,7 @@
     "        self.options.declare('opt_tol', default=1e-5, types=float)\n",
     "        # Enable user to specify, as a list, which among the available outputs\n",
     "        # need to be written to output files\n",
-    "        self.options.declare('outputs', types=list, default=[])\n",
+    "        self.options.declare('readable_outputs', types=list, default=[])\n",
     "\n",
     "        # Specify format of outputs available from your optimizer after each iteration\n",
     "        self.available_outputs = {\n",
@@ -374,7 +374,7 @@
     "optimizer = SteepestDescent(prob,\n",
     "                            opt_tol=opt_tol,\n",
     "                            maxiter=maxiter,\n",
-    "                            outputs=['itr', 'obj', 'x', 'opt', 'time'])\n",
+    "                            readable_outputs=['itr', 'obj', 'x', 'opt', 'time'])\n",
     "\n",
     "# Check first derivatives at the initial guess, if needed\n",
     "optimizer.check_first_derivatives(prob.x0)\n",
