MAJOR REFACTORING WITH MANY CHANGES
1. Rename num_f_evals/num_gevals -> nfev/ngev.
2. setup_outputs() call moved to Optimizer base class setup.
3. available_outputs attribute and readable_outputs option made necessary for all optimizers.
4. print_results() method is required for all optimizers now and will be printed to a file at the end of optimization.
5. timestamps are used to create new output directory for every optimization (no more overwriting).
6. run_postprocessing() call is necessary for all optimizers and it will redirect print_results() to a file.
7. Returning results as a dictionary is necessary for all optimizers.
8. active_callbacks attribute required for all optimizers to allow merging problem and optimizer records.
9. Refactor SNOPT interfaces.
10.Add callback for PySLSQP.

--- a/old_docs/docs/tutorial/simple_example.mdx
+++ b/old_docs/docs/tutorial/simple_example.mdx
@@ -100,10 +100,7 @@ class SteepestDescent(Optimizer):
             'time': float,
         }
 
-        
-
     def solve(self):
-        self.setup_outputs()
         nx = self.problem.nx
         x = self.problem.x0
         opt_tol = self.options['opt_tol']
@@ -169,6 +166,8 @@ class SteepestDescent(Optimizer):
             'itr': itr,
             'time': self.total_time
         }
+
+        self.run_post_processing()
 
         return self.results
 ```
