--- a/tutorials/simple_example.ipynb
+++ b/tutorials/simple_example.ipynb
@@ -133,7 +133,6 @@
     "        }\n",
     "\n",
     "    def solve(self):\n",
-    "        self.setup_outputs()\n",
     "        nx = self.problem.nx\n",
     "        x = self.problem.x0\n",
     "        opt_tol = self.options['opt_tol']\n",
@@ -198,7 +197,11 @@
     "            'opt': opt,\n",
     "            'itr': itr,\n",
     "            'time': self.total_time\n",
-    "        }"
+    "        }\n",
+    "\n",
+    "        self.run_post_processing()\n",
+    "\n",
+    "        return self.results"
    ]
   },
   {
