--- a/tutorials/simple_example.ipynb
+++ b/tutorials/simple_example.ipynb
@@ -193,8 +193,8 @@
     "\n",
     "        self.results = {\n",
     "            'x': x_k,\n",
-    "            'obj': f_k,\n",
-    "            'opt': opt,\n",
+    "            'objective': f_k,\n",
+    "            'optimality': opt,\n",
     "            'itr': itr,\n",
     "            'time': self.total_time\n",
     "        }\n",
@@ -396,8 +396,8 @@
     "print(optimizer.results['itr'])\n",
     "print(optimizer.results['x'])\n",
     "print(optimizer.results['time'])\n",
-    "print(optimizer.results['obj'])\n",
-    "print(optimizer.results['opt'])"
+    "print(optimizer.results['objective'])\n",
+    "print(optimizer.results['optimality'])"
    ]
   }
  ],
