Update the doc structure

--- a/docs/src/csdl_alpha.ipynb
+++ b/docs/src/csdl_alpha.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Solving csdl_alpha problems\n",
+    "# CSDL_alpha\n",
     "\n",
     "## Define a problem in csdl_alpha\n",
     "\n",
