Add Problem and ProblemLite pages in modeling docs. Update modeling docs overall.

--- a/docs/src/modeling/jax.ipynb
+++ b/docs/src/modeling/jax.ipynb
@@ -10,6 +10,7 @@
     "\n",
     "This example does not intend to cover all the features of Jax.\n",
     "For more details and tutorials on Jax, please refer to **[Jax's documentation](https://jax.readthedocs.io/)**.\n",
+    "For more details on the `JaxProblem` class, please see the **[API Reference](../api.md)**.\n",
     "In this example, we solve a constrained problem given by\n",
     "\n",
     "$$\n",
@@ -24,7 +25,7 @@
     "$$\n",
     "\n",
     "We know the solution of this problem is $x_1=1$, and $x_2=0$.\n",
-    "However, we start from an intial guess of $x_1=0$, and $x_2=0.0$ for the purposes of this tutorial.\n",
+    "However, we start from an initial guess of $x_1=500.0$, and $x_2=5.0$ for the purposes of this tutorial.\n",
     "\n",
     "The problem functions are written using Jax functions as follows:"
    ]
