--- a/docs/src/modeling/openmdao.ipynb
+++ b/docs/src/modeling/openmdao.ipynb
@@ -24,7 +24,7 @@
     "$$\n",
     "\n",
     "We know the solution of this problem is $x_1=1$, and $x_2=0$.\n",
-    "However, we start from an intial guess of $x_1=0$, and $x_2=0.0$ for the purposes of this tutorial.\n",
+    "However, we start from an initial guess of $x_1=500.0$, and $x_2=5.0$ for the purposes of this tutorial.\n",
     "\n",
     "The problem functions are written using OpenMDAO components (and groups) as follows:"
    ]
