--- a/docs/src/modeling/problem_lite.ipynb
+++ b/docs/src/modeling/problem_lite.ipynb
@@ -4,12 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CSDL_alpha\n",
+    "# ProblemLite\n",
     "\n",
-    "## Define a problem in csdl_alpha\n",
+    "`ProblemLite` features a minimal API, allowing users to wrap a problem model with a \n",
+    "single line of code once the problem functions and constants are defined.\n",
     "\n",
-    "This example does not intend to cover all the features of csdl_alpha.\n",
-    "For more details and tutorials on csdl_alpha, please refer to **[csdl_alpha documentation](https://csdl-alpha.readthedocs.io)**.\n",
+    "This example does not intend to cover all the features of the `ProblemLite` class.\n",
+    "For more details on `ProblemLite`, please see the **[API Reference](../api.md)**.\n",
     "In this example, we solve a constrained problem given by\n",
     "\n",
     "$$\n",
@@ -26,80 +27,74 @@
     "We know the solution of this problem is $x_1=1$, and $x_2=0$.\n",
     "However, we start from an initial guess of $x_1=500.0$, and $x_2=5.0$ for the purposes of this tutorial.\n",
     "\n",
-    "The problem model is written in csdl_alpha as follows:\n",
-    "\n",
-    "\n"
+    "The problem functions are first written as follows:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csdl_alpha as csdl\n",
+    "import numpy as np\n",
     "\n",
     "# minimize x^2 + y^2 subject to x>=0, x+y=1, x-y>=1.\n",
     "\n",
-    "rec = csdl.Recorder()\n",
-    "rec.start()\n",
+    "# Define problem constants\n",
+    "x0 = np.array([500., 5.])           # Initial guess\n",
+    "xl = np.array([0., -np.inf])        # Variable lower bounds\n",
+    "cl = np.array([1., 1.])             # Constraint lower bounds\n",
+    "cu = np.array([1., np.inf])         # Constraint upper bounds\n",
     "\n",
-    "# add design variables\n",
-    "x = csdl.Variable(name = 'x', value=500.)\n",
-    "y = csdl.Variable(name = 'y', value=5.)\n",
-    "x.set_as_design_variable(lower = 0.0)\n",
-    "y.set_as_design_variable()\n",
+    "# Define problem functions\n",
+    "def objective(x):\n",
+    "    return np.sum(x**2)\n",
     "\n",
-    "# add objective\n",
-    "z = x**2 + y**2\n",
-    "z.add_name('z')\n",
-    "z.set_as_objective()\n",
+    "def objective_gradient(x):    \n",
+    "    return 2 * x\n",
     "\n",
-    "# add constraints\n",
-    "constraint_1 = x + y\n",
-    "constraint_2 = x - y\n",
-    "constraint_1.add_name('constraint_1')\n",
-    "constraint_2.add_name('constraint_2')\n",
-    "constraint_1.set_as_constraint(lower=1., upper=1.)\n",
-    "constraint_2.set_as_constraint(lower=1.)\n",
+    "def constraint(x):\n",
+    "    return np.array([x[0] + x[1], x[0] - x[1]])\n",
     "\n",
-    "rec.stop()"
+    "def constraint_jacobian(x):\n",
+    "    return np.array([[1., 1], [1., -1]])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once your model is defined within csdl_alpha's Recorder object, \n",
-    "create a `Simulator` object from the Recorder object and \n",
-    "translate the `Simulator` object to a `CSDLAlphaProblem` object in modOpt."
+    "If the problem functions and constants are all available as shown above,\n",
+    "create a `ProblemLite` object by passing them in.\n",
+    "Note that `ProblemLite` is just a container for the problem functions and constants, \n",
+    "designed to simplify setups for straighforward problems and those modeled outside of modOpt.\n",
+    "However, it requires users to combine all variables and constraints into single vectors."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from csdl_alpha.experimental import PySimulator, JaxSimulator\n",
+    "import modopt as mo\n",
     "\n",
-    "# Create a Simulator object from the Recorder object\n",
-    "sim = PySimulator(rec)\n",
-    "\n",
-    "# Import CSDLAlphaProblem from modopt\n",
-    "from modopt import CSDLAlphaProblem\n",
-    "\n",
-    "# Instantiate your problem using the csdl Simulator object and name your problem\n",
-    "prob = CSDLAlphaProblem(\n",
-    "    problem_name='quadratic',\n",
-    "    simulator=sim,\n",
-    ")"
+    "prob = mo.ProblemLite(x0, \n",
+    "                      obj=objective,\n",
+    "                      grad=objective_gradient,\n",
+    "                      con=constraint,\n",
+    "                      jac=constraint_jacobian,\n",
+    "                      cl=cl, \n",
+    "                      cu=cu,\n",
+    "                      xl=xl,\n",
+    "                      name='quadratic_lite')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "Once your problem model is wrapped for modOpt, import your preferred optimizer\n",
     "from modOpt and solve it, following the standard procedure.\n",
     "Here we will use the `SLSQP` optimizer from the SciPy library."
@@ -107,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -126,12 +121,12 @@
       "\n",
       "\tSolution from Scipy SLSQP:\n",
       "\t----------------------------------------------------------------------------------------------------\n",
-      "\tProblem                  : quadratic\n",
+      "\tProblem                  : quadratic_lite\n",
       "\tSolver                   : scipy-slsqp\n",
       "\tSuccess                  : True\n",
       "\tMessage                  : Optimization terminated successfully\n",
       "\tStatus                   : 0\n",
-      "\tTotal time               : 0.006938934326171875\n",
+      "\tTotal time               : 0.024142980575561523\n",
       "\tObjective                : 1.0000000068019972\n",
       "\tGradient norm            : 2.000000006801997\n",
       "\tTotal function evals     : 2\n",
@@ -149,11 +144,9 @@
     }
    ],
    "source": [
-    "from modopt import SLSQP\n",
-    "\n",
     "# Setup your preferred optimizer (SLSQP) with the Problem object \n",
     "# Pass in the options for your chosen optimizer\n",
-    "optimizer = SLSQP(prob, solver_options={'maxiter':20})\n",
+    "optimizer = mo.SLSQP(prob, solver_options={'maxiter':20})\n",
     "\n",
     "# Check first derivatives at the initial guess, if needed\n",
     "optimizer.check_first_derivatives(prob.x0)\n",
