Minor changes to modeling docs

--- a/docs/src/modeling/csdl_alpha.ipynb
+++ b/docs/src/modeling/csdl_alpha.ipynb
@@ -6,10 +6,10 @@
    "source": [
     "# CSDL_alpha\n",
     "\n",
-    "## Define a problem in csdl_alpha\n",
+    "## Define a problem in `CSDL_alpha`\n",
     "\n",
-    "This example does not intend to cover all the features of csdl_alpha.\n",
-    "For more details and tutorials on csdl_alpha, please refer to **[csdl_alpha documentation](https://csdl-alpha.readthedocs.io)**.\n",
+    "This example does not intend to cover all the features of *CSDL_alpha*.\n",
+    "For more details and tutorials on *CSDL_alpha*, please refer to **[CSDL_alpha documentation](https://csdl-alpha.readthedocs.io)**.\n",
     "In this example, we solve a constrained problem given by\n",
     "\n",
     "$$\n",
@@ -26,7 +26,7 @@
     "We know the solution of this problem is $x_1=1$, and $x_2=0$.\n",
     "However, we start from an initial guess of $x_1=500.0$, and $x_2=5.0$ for the purposes of this tutorial.\n",
     "\n",
-    "The problem model is written in csdl_alpha as follows:\n",
+    "The problem model is written in *CSDL_alpha* as follows:\n",
     "\n",
     "\n"
    ]
@@ -70,9 +70,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once your model is defined within csdl_alpha's Recorder object, \n",
-    "create a `Simulator` object from the Recorder object and \n",
-    "translate the `Simulator` object to a `CSDLAlphaProblem` object in modOpt."
+    "Once your model is defined within *CSDL_alpha*'s `Recorder` object, \n",
+    "create a `Simulator` object from it. \n",
+    "Lastly, translate the `Simulator` object to a `CSDLAlphaProblem` object \n",
+    "for use in modOpt."
    ]
   },
   {
@@ -100,6 +101,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Solve your problem using an optimizer\n",
+    "\n",
     "Once your problem model is wrapped for modOpt, import your preferred optimizer\n",
     "from modOpt and solve it, following the standard procedure.\n",
     "Here we will use the `SLSQP` optimizer from the SciPy library."
