--- a/docs/src/modeling/jax.ipynb
+++ b/docs/src/modeling/jax.ipynb
@@ -90,6 +90,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Solve your problem using an optimizer\n",
+    "\n",
     "Once your problem model is wrapped for modOpt, import your preferred optimizer\n",
     "from modOpt and solve it, following the standard procedure.\n",
     "Here we will use the `SLSQP` optimizer from the SciPy library."
