--- a/docs/src/modeling/problem.ipynb
+++ b/docs/src/modeling/problem.ipynb
@@ -95,6 +95,8 @@
     "beneficial for certain problems, e.g, sparse problems where some of the constraints \n",
     "are only affected by a subset of the variables.\n",
     "\n",
+    "## Solve your problem using an optimizer\n",
+    "\n",
     "Once your problem is completely defined within a subclass (here `QuadraticProblem`) of `Problem`,\n",
     "create a subclass object to pass to the optimizer.\n",
     "Lastly, import your preferred optimizer from modOpt \n",
