--- a/docs/src/modeling/problem_lite.ipynb
+++ b/docs/src/modeling/problem_lite.ipynb
@@ -9,6 +9,8 @@
     "`ProblemLite` features a minimal API, allowing users to wrap a problem model with a \n",
     "single line of code once the problem functions and constants are defined.\n",
     "\n",
+    "## Define a problem using modOpt's `ProblemLite` class\n",
+    "\n",
     "This example does not intend to cover all the features of the `ProblemLite` class.\n",
     "For more details on `ProblemLite`, please see the **[API Reference](../api.md)**.\n",
     "In this example, we solve a constrained problem given by\n",
@@ -94,6 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Solve your problem using an optimizer\n",
     "\n",
     "Once your problem model is wrapped for modOpt, import your preferred optimizer\n",
     "from modOpt and solve it, following the standard procedure.\n",
