--- a/docs/src/modeling/casadi.ipynb
+++ b/docs/src/modeling/casadi.ipynb
@@ -48,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ModOpt will auto-generate the gradient, Jacobian, and objective Hessian,\n",
+    "modOpt will auto-generate the gradient, Jacobian, and objective Hessian,\n",
     "as well as the Lagrangian, its gradient, and Hessian.\n",
     "Users do not need to manually generate these functions or their derivatives\n",
     "using CasADi and then wrap them.\n",
@@ -88,6 +88,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Solve your problem using an optimizer\n",
+    "\n",
     "Once your problem model is wrapped for modOpt, import your preferred optimizer\n",
     "from modOpt and solve it, following the standard procedure.\n",
     "Here we will use the `SLSQP` optimizer from the SciPy library."
