--- a/docs/src/modeling/csdl_alpha.ipynb
+++ b/docs/src/modeling/csdl_alpha.ipynb
@@ -167,6 +167,39 @@
     "# Print results of optimization\n",
     "optimizer.print_results()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Scaling API\n",
+    "\n",
+    "Please refer to the code snippet below as a guide for scaling \n",
+    "the design variables, objective, and constraints independent \n",
+    "of their definitions.\n",
+    "```{warning}\n",
+    "The results provided by the optimizer will always be scaled,\n",
+    "while the values from the models will remain unscaled.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add design variables\n",
+    "x.set_as_design_variable(lower = 0.0, scaler=2.)\n",
+    "y.set_as_design_variable(scaler=2.)\n",
+    "\n",
+    "# add objective\n",
+    "z.set_as_objective(scaler=5.)\n",
+    "\n",
+    "# add constraints\n",
+    "constraint_1.set_as_constraint(lower=1., upper=1., scaler=10.)\n",
+    "constraint_2.set_as_constraint(lower=1., scaler=100.)"
+   ]
   }
  ],
  "metadata": {
