--- a/docs/src/modeling/openmdao.ipynb
+++ b/docs/src/modeling/openmdao.ipynb
@@ -210,6 +210,35 @@
     "# Print results of optimization\n",
     "optimizer.print_results()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Scaling API\n",
+    "\n",
+    "Please refer to the code snippet below as a guide for scaling \n",
+    "the design variables, objective, and constraints independent \n",
+    "of their definitions.\n",
+    "```{warning}\n",
+    "The results provided by the optimizer will always be scaled,\n",
+    "while the values from the models will remain unscaled.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add optimization variables and functions to the Problem model\n",
+    "om_prob.model.add_design_var('x', lower=0., scaler=2.)\n",
+    "om_prob.model.add_design_var('y', scaler=2.)\n",
+    "om_prob.model.add_objective('objective', scaler=5.)\n",
+    "om_prob.model.add_constraint('constraint_1', equals=1., scaler=10.)\n",
+    "om_prob.model.add_constraint('constraint_2', lower=1., scaler=100.)"
+   ]
   }
  ],
  "metadata": {
