--- a/docs/src/modeling/problem.ipynb
+++ b/docs/src/modeling/problem.ipynb
@@ -88,7 +88,7 @@
    "metadata": {},
    "source": [
     "Note that in the code above, we combined all the variables and constraints into single vectors.\n",
-    "For examples with multiple variable and constraint vectors, see **[Examples](../examples.md)**.\n",
+    "For examples with multiple variable and constraint vectors, see **[Examples](../examples/basic.md)**.\n",
     "This is one of the additional convenience features offered by `Problem` over `ProblemLite`,\n",
     "as `ProblemLite` requires users to combine all variables and constraints into single vectors.\n",
     "Although more verbose than `ProblemLite`, using the `Problem` class as shown above can be more \n",
@@ -164,6 +164,46 @@
     "\n",
     "# Print results of optimization\n",
     "optimizer.print_results()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Scaling API\n",
+    "\n",
+    "Please refer to the code snippet below as a guide for scaling \n",
+    "the design variables, objective, and constraints independent\n",
+    "of their definitions.\n",
+    "\n",
+    "```{warning}\n",
+    "The results provided by the optimizer will always be scaled,\n",
+    "while the values from the models will remain unscaled.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def setup(self):\n",
+    "    self.add_design_variables('x',                              # Design variable name\n",
+    "                              shape=(2, ),                      # Design variable shape\n",
+    "                              lower=np.array([0., -np.inf]),    # Design variable lower bounds\n",
+    "                              vals=np.array([500., 5.]),        # Initial guess\n",
+    "                              scaler=2.)                        # Design variable scaler - constant value\n",
+    "                            #   scaler=np.array([1., 2.])       # Design variable scaler - vector value\n",
+    "    \n",
+    "    self.add_objective('f', scaler=5.0)                                     # Objective name and scaler\n",
+    "\n",
+    "    self.add_constraints('c',                                   # Constraint name\n",
+    "                         shape=(2, ),                           # Constraint shape\n",
+    "                         lower=np.array([1., 1.]),              # Constraint lower bounds\n",
+    "                         upper=np.array([1., np.inf]),          # Constraint upper bounds\n",
+    "                         scaler=np.array([10., 100.]))          # Constraint scaler - vector value\n",
+    "                        #  scaler=5.0)                          # Constraint scaler - constant value"
    ]
   }
  ],
