--- a/docs/src/modeling/problem_lite.ipynb
+++ b/docs/src/modeling/problem_lite.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,15 +69,26 @@
     "If the problem functions and constants are all available as shown above,\n",
     "create a `ProblemLite` object by passing them in.\n",
     "Note that `ProblemLite` is just a container for the problem functions and constants, \n",
-    "designed to simplify setups for straighforward problems and those modeled outside of modOpt.\n",
+    "designed to simplify setups for straightforward problems and those modeled outside of modOpt.\n",
     "However, it requires users to combine all variables and constraints into single vectors."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/anugrah/Packages/mdo_wi2024/modopt/modopt/core/problem_lite.py:198: UserWarning: Objective Hessian function \"obj_hess\" not provided. Finite differences will be used if objective Hessian computation is necessary.\n",
+      "  warnings.warn('Objective Hessian function \"obj_hess\" not provided. Finite differences will be used if objective Hessian computation is necessary.')\n",
+      "/Users/anugrah/Packages/mdo_wi2024/modopt/modopt/core/problem_lite.py:209: UserWarning: Lagrangian Hessian function \"lag_hess\" not provided. Finite differences will be used if Lagrangian Hessian computation is necessary.\n",
+      "  warnings.warn('Lagrangian Hessian function \"lag_hess\" not provided. Finite differences will be used if Lagrangian Hessian computation is necessary.')\n"
+     ]
+    }
+   ],
    "source": [
     "import modopt as mo\n",
     "\n",
@@ -105,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +140,7 @@
       "\tSuccess                  : True\n",
       "\tMessage                  : Optimization terminated successfully\n",
       "\tStatus                   : 0\n",
-      "\tTotal time               : 0.024142980575561523\n",
+      "\tTotal time               : 0.0016057491302490234\n",
       "\tObjective                : 1.0000000068019972\n",
       "\tGradient norm            : 2.000000006801997\n",
       "\tTotal function evals     : 2\n",
@@ -158,6 +169,76 @@
     "optimizer.solve()\n",
     "\n",
     "# Print results of optimization\n",
+    "optimizer.print_results()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Scaling API\n",
+    "\n",
+    "Please refer to the code snippet below as a guide for scaling \n",
+    "the design variables, objective, and constraints independent \n",
+    "of their definitions.\n",
+    "```{warning}\n",
+    "The results provided by the optimizer will always be scaled,\n",
+    "while the values from the models will remain unscaled.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\tSolution from Scipy SLSQP:\n",
+      "\t----------------------------------------------------------------------------------------------------\n",
+      "\tProblem                  : quadratic_lite_scaled\n",
+      "\tSolver                   : scipy-slsqp\n",
+      "\tSuccess                  : True\n",
+      "\tMessage                  : Optimization terminated successfully\n",
+      "\tStatus                   : 0\n",
+      "\tTotal time               : 0.0033338069915771484\n",
+      "\tObjective                : 4.999999999999996\n",
+      "\tGradient norm            : 4.999999878155281\n",
+      "\tTotal function evals     : 3\n",
+      "\tTotal gradient evals     : 2\n",
+      "\tMajor iterations         : 2\n",
+      "\tTotal callbacks          : 11\n",
+      "\tReused callbacks         : 0\n",
+      "\tobj callbacks            : 3\n",
+      "\tgrad callbacks           : 2\n",
+      "\thess callbacks           : 0\n",
+      "\tcon callbacks            : 4\n",
+      "\tjac callbacks            : 2\n",
+      "\t----------------------------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "prob = mo.ProblemLite(x0, \n",
+    "                      obj=objective,\n",
+    "                      grad=objective_gradient,\n",
+    "                      con=constraint,\n",
+    "                      jac=constraint_jacobian,\n",
+    "                      cl=cl, \n",
+    "                      cu=cu,\n",
+    "                      xl=xl,\n",
+    "                      x_scaler=2., # constant to scale all variables\n",
+    "                    # x_scaler=np.array([1., 2.]), # scaler to scale each variable differently\n",
+    "                      o_scaler=5., # objective function scaler\n",
+    "                    # c_scaler=10., # constant to scale all constraints\n",
+    "                      c_scaler=np.array([10., 100.]), # scaler to scale each constraint differently\n",
+    "                      name='quadratic_lite_scaled')\n",
+    "\n",
+    "optimizer = mo.SLSQP(prob, solver_options={'maxiter':20})\n",
+    "optimizer.solve()\n",
     "optimizer.print_results()"
    ]
   }
