--- a/docs/src/modeling/jax.ipynb
+++ b/docs/src/modeling/jax.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,20 +62,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/anugrah/Packages/mdo_wi2024/modopt/modopt/core/problem_lite.py:193: UserWarning: Objective Hessian function \"obj_hess\" not provided. Finite differences will be used if objective Hessian computation is necessary.\n",
-      "  warnings.warn('Objective Hessian function \"obj_hess\" not provided. Finite differences will be used if objective Hessian computation is necessary.')\n",
-      "/Users/anugrah/Packages/mdo_wi2024/modopt/modopt/core/problem_lite.py:204: UserWarning: Lagrangian Hessian function \"lag_hess\" not provided. Finite differences will be used if Lagrangian Hessian computation is necessary.\n",
-      "  warnings.warn('Lagrangian Hessian function \"lag_hess\" not provided. Finite differences will be used if Lagrangian Hessian computation is necessary.')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import modopt as mo\n",
@@ -99,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +112,7 @@
       "\tSuccess                  : True\n",
       "\tMessage                  : Optimization terminated successfully\n",
       "\tStatus                   : 0\n",
-      "\tTotal time               : 0.0031862258911132812\n",
+      "\tTotal time               : 0.004587888717651367\n",
       "\tObjective                : 1.0000000068019972\n",
       "\tGradient norm            : 2.000000006801997\n",
       "\tTotal function evals     : 2\n",
@@ -152,6 +141,71 @@
     "optimizer.solve()\n",
     "\n",
     "# Print results of optimization\n",
+    "optimizer.print_results()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Scaling API\n",
+    "\n",
+    "Please refer to the code snippet below as a guide for scaling \n",
+    "the design variables, objective, and constraints independent \n",
+    "of their definitions.\n",
+    "```{warning}\n",
+    "The results provided by the optimizer will always be scaled,\n",
+    "while the values from the models will remain unscaled.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\tSolution from Scipy SLSQP:\n",
+      "\t----------------------------------------------------------------------------------------------------\n",
+      "\tProblem                  : quadratic_jax_scaled\n",
+      "\tSolver                   : scipy-slsqp\n",
+      "\tSuccess                  : True\n",
+      "\tMessage                  : Optimization terminated successfully\n",
+      "\tStatus                   : 0\n",
+      "\tTotal time               : 0.0016129016876220703\n",
+      "\tObjective                : 4.999999999999996\n",
+      "\tGradient norm            : 4.999999878155281\n",
+      "\tTotal function evals     : 3\n",
+      "\tTotal gradient evals     : 2\n",
+      "\tMajor iterations         : 2\n",
+      "\tTotal callbacks          : 11\n",
+      "\tReused callbacks         : 0\n",
+      "\tobj callbacks            : 3\n",
+      "\tgrad callbacks           : 2\n",
+      "\thess callbacks           : 0\n",
+      "\tcon callbacks            : 4\n",
+      "\tjac callbacks            : 2\n",
+      "\t----------------------------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "prob = mo.JaxProblem(x0=np.array([500., 5.]), nc=2, jax_obj=jax_obj, jax_con=jax_con,\n",
+    "                     xl=np.array([0., -np.inf]), xu=np.array([np.inf, np.inf]),\n",
+    "                     cl=np.array([1., 1.]), cu=np.array([1., np.inf]), \n",
+    "                     x_scaler=2., # constant to scale all variables\n",
+    "                    # x_scaler=np.array([1., 2.]), # scaler to scale each variable differently\n",
+    "                     o_scaler=5., # objective function scaler\n",
+    "                    # c_scaler=10., # constant to scale all constraints\n",
+    "                     c_scaler=np.array([10., 100.]), # scaler to scale each constraint differently\n",
+    "                     name='quadratic_jax_scaled', order=1)\n",
+    "\n",
+    "optimizer = mo.SLSQP(prob, solver_options={'maxiter':20})\n",
+    "optimizer.solve()\n",
     "optimizer.print_results()"
    ]
   }
