Add API reference for line searches

--- a/docs/src/modeling/jax.ipynb
+++ b/docs/src/modeling/jax.ipynb
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ModOpt will auto-generate and jit-compile the gradient, Jacobian, \n",
+    "modOpt will auto-generate and jit-compile the gradient, Jacobian, \n",
     "and objective Hessian, as well as the Lagrangian, its gradient, and Hessian.\n",
     "Users do not need to manually generate/jit-compile these functions \n",
     "or their derivatives using Jax and then wrap them.\n",
