--- a/old_docs/docs/installation_instructions.mdx
+++ b/old_docs/docs/installation_instructions.mdx
@@ -18,7 +18,7 @@ pip install git+https://github.com/anugrahjo/array_manager.git@modopt
 
 :::danger Note
 
-ModOpt relies on numpy and scipy packages. Please install them from 
+modOpt relies on NumPy and SciPy packages. Please install them from 
 **[numpy](https://numpy.org/install/)** and **[scipy](https://www.scipy.org/install.html)** if you are new to it.
 
 :::
