--- a/old_docs/docs/introduction.mdx
+++ b/old_docs/docs/introduction.mdx
@@ -6,7 +6,7 @@ sidebar_position: 1
 # Introduction
 This webpage serves as the documentation for **modOpt** - a modular development environment and library optimizers.
 
-ModOpt is primarily developed for **easy and fast** development of gradient-based optimization algorithms through modular construction of algorithms
+modOpt is primarily developed for **easy and fast** development of gradient-based optimization algorithms through modular construction of algorithms
 and testing with built-in problems and interfaces with test-suites.
 
 **Benchmarking** with built-in standard algorithms or interfaced external optimizer libraries are also possible.
